--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/payment-service
+spring.datasource.username = root
+spring.datasource.password = asd123ASD!@
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+server.port=8080
 
+#-------------------------------------------------------
+# Pretty-print JSON responses
+spring.jackson.serialization.INDENT_OUTPUT=true
+spring.jackson.default-property-inclusion=non_null
+
+# Whether to output serialized JSON that fits in a page for pretty printing.
+spring.gson.pretty-printing=true
+
+# Whether to serialize null fields.
+spring.gson.serialize-nulls=true
