create all services and repositories for Payment service & create custom exceptions & implement transfer money api almostly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.gson.pretty-printing=true
 
 # Whether to serialize null fields.
 spring.gson.serialize-nulls=true
+
+currency_descriptor = RIAL
+user_id = 1
