--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/payment-service
+spring.datasource.url = jdbc:mysql://localhost:3306/payment
 spring.datasource.username = root
 spring.datasource.password = asd123ASD!@
 spring.jpa.show-sql = true
@@ -19,5 +19,5 @@ spring.gson.pretty-printing=true
 # Whether to serialize null fields.
 spring.gson.serialize-nulls=true
 
-currency_descriptor = RIAL
+currency_descriptor = rial
 user_id = 1
