call service notification rest and send email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,20 @@
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/payment
-spring.datasource.username = root
-spring.datasource.password = asd123ASD!@
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/payment
+spring.datasource.username=root
+spring.datasource.password=asd123ASD!@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
-
-
 #-------------------------------------------------------
 # Pretty-print JSON responses
 spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.default-property-inclusion=non_null
-
 # Whether to output serialized JSON that fits in a page for pretty printing.
 spring.gson.pretty-printing=true
-
 # Whether to serialize null fields.
 spring.gson.serialize-nulls=true
 
-currency_descriptor = rial
-user_id = 1
+currency_descriptor=rial
+user_id=1
+resource.notification=http://localhost:8082/api/v1/notify
