create sms request dto and send sms notification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.gson.pretty-printing=true
 # Whether to serialize null fields.
 spring.gson.serialize-nulls=true
 
+sender_email=sender@gmail.com
 currency_descriptor=rial
 user_id=1
 resource.notification=http://localhost:8082/api/v1/notify
