implement rabbitmq and produce notification and send sms and email notification together

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,15 @@ sender_email=sender@gmail.com
 currency_descriptor=rial
 user_id=1
 resource.notification=http://localhost:8082/api/v1/notify
+
+# rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+#jsa.rabbitmq.exchange=jsa.direct
+#jsa.rabbitmq.routingkey=jsa.routingkey
+
+notification.rabbitmq.exchange=notification.exchange
+notification.rabbitmq.queue=notification.queue
+notification.rabbitmq.routingkey=notification.routingkey
